index.css
body {
  display: flex;
  flex-direction: column;
  background: #EDEDED;
  font-family: 'Raleway';
  align-items: center;
  gap: 32px;
  margin: auto;
  width: 1136px;
}

/* * HEADER */

header {
  display: flex;
  justify-content: space-evenly;
  font-family: Raleway;
  display: flex;
  width: 1136px;
  padding: 32px;
  justify-content: space-between;
  background-color: rgba(255, 0, 0, 0.178);
  align-items: center;
}

nav {
  display: flex;
  align-items: center;

}

ol {
  display: flex;
  gap: 18px;
  list-style-type: none;
  font-size: 14px;
}

.email a {
  color: #464646;
  font-weight: bold;
}

.email a:hover {
  color: rgb(0, 100, 143);
  border: #464646 dashed 2.5px;
  height: 1rem;
}

.introduction {
  font-size: 22px;
}

.container_logo_name {
  display: flex;
  align-items: center;
  gap: 10px;

}

.profile_picture {
  height: 360px;
  margin: 0 0 0 2rem;
  border: solid 2px #464646;
  border-radius: 100%;
}

.main_container {
  /* width: 1136px; */
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.main_container h1 {
  color: #464646;
  font-size: 56px;
  font-style: bol;
  font-weight: 800;
  line-height: normal;
}

.about_me {
  padding: 4rem;
  gap: 0.625rem;
  background-color: #EAF2FD;
}

ol{
  display: flex;
  flex-direction: co;
  width: 1136px;
}

.skills {
  display: flex;
  align-items: flex-start;
  gap: 16px;
  width: 1136px;
  margin: 0 152px;
}

.skills_items{
  background-color: #FFF;
  display: flex;
  width: 176px;
  height: 174px;
  padding: 16px;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  gap: 8px;
  
}

.hobbies  {
  display: flex;
  align-items: flex-start;
  gap: 16px;
  width: 1136px;
  margin: 0 152px;

}

.hobbies_items{
  background-color: #FFF;
  display: flex;
  width: 176px;
  height: 174px;
  padding: 16px;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  gap: 8px;
}

